// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesComplexFilterOr 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
    Object {
      "title": "JS",
    },
  ],
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "React",
    },
    Object {
      "title": "MongoDB",
    },
    Object {
      "title": "JS",
    },
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 2`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
    Object {
      "title": "JS",
    },
    Object {
      "title": "MongoDB",
    },
    Object {
      "title": "React",
    },
  ],
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 7`] = `
Object {
  "users": Array [
    Object {
      "profile": Object {
        "firstName": "Gwion",
        "lastName": "Britt",
      },
      "username": "subscriber1",
    },
    Object {
      "role": null,
      "username": "admin",
    },
    Object {
      "role": null,
      "username": "moderator",
    },
  ],
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 8`] = `
Object {
  "categories": Array [],
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 10`] = `
Object {
  "createPost": Object {
    "title": "Build GraphQL API with Apollo",
  },
}
`;

exports[`CategoriesOrderByFieldWithDBDirective 11`] = `
Object {
  "categories": Array [
    Object {
      "title": "React",
    },
    Object {
      "title": "MongoDB",
    },
    Object {
      "title": "JS",
    },
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CategoriesRelationFilter 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "JS",
    },
    Object {
      "title": "MongoDB",
    },
  ],
}
`;

exports[`CategoriesRelationFilter 2`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "root",
    },
    "title": "JS",
  },
}
`;

exports[`CategoriesRelationFilter 3`] = `
Object {
  "categories": Array [
    Object {
      "subcategories": Array [
        Object {
          "subcategories": Array [],
          "title": "JS",
        },
        Object {
          "subcategories": Array [],
          "title": "MongoDB",
        },
      ],
      "title": "root",
    },
  ],
}
`;

exports[`CategoriesRelationFilter 4`] = `
Object {
  "categories": Array [
    Object {
      "title": "JS",
    },
    Object {
      "title": "MongoDB",
    },
  ],
}
`;

exports[`CategoriesSameFieldFilter 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "JS",
    },
  ],
}
`;

exports[`CategoriesSameFieldFilter 2`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
    Object {
      "title": "JS",
    },
    Object {
      "title": "MongoDB",
    },
    Object {
      "title": "React",
    },
  ],
}
`;

exports[`CategoryDelete 1`] = `
Object {
  "deleteCategory": Object {
    "title": "React",
  },
}
`;

exports[`CategoryDelete 5`] = `
Object {
  "deleteCategory": Object {
    "title": "React",
  },
}
`;

exports[`CreateAdmin 1`] = `
Object {
  "createAdmin": Object {
    "username": "admin",
  },
}
`;

exports[`CreateAdmin 2`] = `
Object {
  "createAdmin": Object {
    "username": "admin",
  },
}
`;

exports[`CreateCategory 1`] = `
Object {
  "createCategory": Object {
    "title": "root",
  },
}
`;

exports[`CreateChildCategory "JS" 1`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "root",
    },
    "title": "JS",
  },
}
`;

exports[`CreateChildCategory "MongoDB" 1`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "root",
    },
    "title": "MongoDB",
  },
}
`;

exports[`CreateChildCategory "MongoDB" 2`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "root",
    },
    "title": "JS",
  },
}
`;

exports[`CreateChildCategory "MongoDB" 3`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "root",
    },
    "title": "MongoDB",
  },
}
`;

exports[`CreateChildCategory "React" 1`] = `
Object {
  "createCategory": Object {
    "parentCategory": Object {
      "title": "JS",
    },
    "title": "React",
  },
}
`;

exports[`CreatePostWithInterfaceRelation 1`] = `
Object {
  "createPost": Object {
    "title": "Build GraphQL API with Apollo",
  },
}
`;

exports[`CreatePostWithInterfaceRelation 2`] = `
Object {
  "createPost": Object {
    "title": "Build GraphQL API with Apollo",
  },
}
`;

exports[`CreateShop abstract interface 1`] = `
Object {
  "createShop": Object {
    "title": "ifc mall",
  },
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 1`] = `
Object {
  "createSubscriber": Object {
    "profile": Object {
      "firstName": "Gwion",
      "lastName": "Britt",
    },
    "username": "subscriber1",
  },
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 2`] = `
Object {
  "createCategory": Object {
    "title": "root",
  },
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 3`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 4`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 5`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 6`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`CreateSubscriberWithEmbeddedDocument 7`] = `
Object {
  "createSubscriber": null,
}
`;

exports[`QueryCategories after create 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`QueryCategories after delete 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
    Object {
      "title": "JS",
    },
    Object {
      "title": "MongoDB",
    },
  ],
}
`;

exports[`QueryCategories empty 1`] = `
Object {
  "categories": Array [],
}
`;

exports[`QueryCategoriesByTitle 1`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`QueryCategoriesByTitle 2`] = `
Object {
  "createCategory": Object {
    "title": "root",
  },
}
`;

exports[`QueryCategoriesByTitle 3`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`QueryCategoriesByTitle 4`] = `
Object {
  "createCategory": null,
}
`;

exports[`QueryCategoriesByTitle 5`] = `
Object {
  "categories": Array [
    Object {
      "title": "root",
    },
  ],
}
`;

exports[`QueryCategoriesExtRelation 1`] = `
Object {
  "categories": Array [
    Object {
      "subcategories": Array [
        Object {
          "subcategories": Array [
            Object {
              "title": "React",
            },
          ],
          "title": "JS",
        },
        Object {
          "subcategories": Array [],
          "title": "MongoDB",
        },
      ],
      "title": "root",
    },
    Object {
      "subcategories": Array [
        Object {
          "subcategories": Array [],
          "title": "React",
        },
      ],
      "title": "JS",
    },
    Object {
      "subcategories": Array [],
      "title": "MongoDB",
    },
    Object {
      "subcategories": Array [],
      "title": "React",
    },
  ],
}
`;

exports[`QueryHotels 1`] = `
Object {
  "hotels": Array [
    Object {
      "stars": 5,
      "title": "Marriott",
    },
  ],
}
`;

exports[`QueryPostsNearPoint 1`] = `
Object {
  "posts": Array [
    Object {
      "place": Object {
        "distance": 1111.9492664453662,
      },
      "title": "Build GraphQL API with Apollo",
    },
  ],
}
`;

exports[`QueryPostsNearPoint 2`] = `
Object {
  "posts": Array [],
}
`;

exports[`QueryShopById 1`] = `
Object {
  "shop": Object {
    "title": "ifc mall",
  },
}
`;

exports[`QueryShopById 2`] = `
Object {
  "shop": null,
}
`;

exports[`QueryShopById after updates 1`] = `
Object {
  "shop": null,
}
`;

exports[`QueryShops 1`] = `
Object {
  "shops": Array [
    Object {
      "title": "ifc mall",
    },
  ],
}
`;

exports[`QueryShops 2`] = `
Object {
  "shops": Array [
    Object {
      "title": "ifc mall",
    },
  ],
}
`;

exports[`QueryUsersInterface 1`] = `
Object {
  "users": Array [
    Object {
      "profile": Object {
        "firstName": "Gwion",
        "lastName": "Britt",
      },
      "username": "subscriber1",
    },
    Object {
      "role": null,
      "username": "admin",
    },
    Object {
      "role": null,
      "username": "moderator",
    },
  ],
}
`;

exports[`QueryUsersInterface 2`] = `
Object {
  "categories": Array [
    Object {
      "subcategories": Array [],
      "title": "root",
    },
  ],
}
`;

exports[`QueryUsersInterface 3`] = `null`;

exports[`Update Post create abstract relation Hotel  1`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
    ],
  },
}
`;

exports[`Update Post create abstract relation Hotel  2`] = `
Object {
  "deleteCategory": Object {
    "title": "React",
  },
}
`;

exports[`Update Post create abstract relation Hotel  3`] = `
Object {
  "shop": Object {
    "title": "ifc mall",
  },
}
`;

exports[`Update Post create abstract relation Hotel  4`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
    ],
  },
}
`;

exports[`UpdatePostConnectShop 1`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
      Object {
        "title": "ifc mall",
      },
    ],
  },
}
`;

exports[`UpdatePostConnectShop 2`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
      Object {
        "title": "ifc mall",
      },
    ],
  },
}
`;

exports[`UpdatePostConnectShop 3`] = `undefined`;

exports[`UpdatePostDeleteShop 1`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
    ],
  },
}
`;

exports[`UpdatePostDisconnectShop 1`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
    ],
  },
}
`;

exports[`UpdatePostDisconnectShop 2`] = `undefined`;

exports[`test empty object instead array 1`] = `
Object {
  "updatePost": Object {
    "pois": Array [
      Object {
        "title": "Marriott",
      },
    ],
  },
}
`;
